--- a/puzzling-logic/package.json
+++ b/puzzling-logic/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-router-dom": "^6.9.0",
+    "react-xarrows": "^2.0.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
