--- a/puzzling-logic/package.json
+++ b/puzzling-logic/package.json
@@ -19,7 +19,8 @@
     "react-draggable": "^4.4.5",
     "react-router-dom": "^6.9.0",
     "react-xarrows": "^2.0.2",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
