--- a/puzzling-logic/package.json
+++ b/puzzling-logic/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-archer": "^4.2.3",
     "react-bootstrap": "^2.7.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
