--- a/puzzling-logic/package.json
+++ b/puzzling-logic/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.59.3",
     "typescript": "^4.9.3",
