--- a/puzzling-logic/package.json
+++ b/puzzling-logic/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "popper": "^1.0.1",
     "react": "^18.2.0",
     "react-archer": "^4.2.3",
     "react-bootstrap": "^2.7.2",
@@ -21,9 +22,11 @@
     "react-router-dom": "^6.9.0",
     "react-xarrows": "^2.0.2",
     "styled-components": "^5.3.9",
+    "util": "^0.12.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
