--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,11 +8,31 @@ on:
 
 jobs:
 
-  build:
+  build-and-publish:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag puzzling-logic:$(date +%s)
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to GitHub Container Registry (GHCR)
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push Docker image to GitHub Packages
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ghcr.io/${{ github.repository_owner }}/PuzzlingLogic/puzzling-logic:latest,ghcr.io/${{ github.repository_owner }}/PuzzlingLogic/puzzling-logic:${{ github.run_number }}
+
+    # Optional: Logout from GitHub Container Registry
+    - name: Logout from GitHub Container Registry
+      run: docker logout ghcr.io
