--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,38 +1,21 @@
-name: Docker Image CI
+name: Docker CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main 
 
 jobs:
-
-  build-and-publish:
-
+  build_and_push:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Log in to GitHub Container Registry (GHCR)
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and push Docker image to GitHub Packages
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: ghcr.io/${{ github.repository_owner }}/puzzling-logic/puzzling-logic:latest,ghcr.io/${{ github.repository_owner }}/puzzling-logic/puzzling-logic:${{ github.run_number }}
-
-    # Optional: Logout from GitHub Container Registry
-    - name: Logout from GitHub Container Registry
-      run: docker logout ghcr.io
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Build and Push the Image to GHCR
+        run: |
+          docker login ghcr.io -u ${{ github.repository_owner }} \
+          -p ${{ github.token }}
+          docker build -t ghcr.io/${{ github.repository_owner }}/puzzling-logic:latest .
+          docker push ghcr.io/${{ github.repository_owner }}/puzzling-logic:latest
