--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,5 +17,5 @@ jobs:
         run: |
           docker login ghcr.io -u ${{ github.repository_owner }} \
           -p ${{ github.token }}
-          docker build -t ghcr.io/${{ github.repository_owner }}/puzzling-logic:latest .
+          docker build . --file Dockerfile --tag ghcr.io/${{ github.repository_owner }}/puzzling-logic:latest
           docker push ghcr.io/${{ github.repository_owner }}/puzzling-logic:latest
