--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,11 +10,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: set lower case owner name
-        run: |
-          echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
-        env:
-          OWNER: '${{ github.repository_owner }}'
       - name: Checkout code
         uses: actions/checkout@v3
       
@@ -22,5 +17,5 @@ jobs:
         run: |
           docker login ghcr.io -u ${{ github.repository_owner }} \
           -p ${{ github.token }}
-          docker build . --file Dockerfile --tag ghcr.io/${{ OWNER_LC }}/puzzling-logic:latest
-          docker push ghcr.io/${{ OWNER_LC }}/puzzling-logic:latest
+          docker build . --file Dockerfile --tag ghcr.io/aurux/puzzling-logic:latest
+          docker push ghcr.io/aurux/puzzling-logic:latest
