--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Build and Push the Image to GHCR
         run: |
           docker login ghcr.io -u ${{ github.repository_owner }} \
-          -p ${{ github.token }}
+          -p ${{ secret.PAT }}
           docker build . --file Dockerfile --tag ghcr.io/aurux/puzzling-logic:latest
           docker push ghcr.io/aurux/puzzling-logic:latest
